--- a/RecyclerViewTest/app/src/main/res/layout/item.xml
+++ b/RecyclerViewTest/app/src/main/res/layout/item.xml
@@ -6,13 +6,13 @@
     android:layout_margin="5dp">
 
     <ImageView
-        android:id="@+id/animal_image"
+        android:id="@+id/item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
 
     <TextView
-        android:id="@+id/animal_name"
+        android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
