--- a/RecyclerViewTest/app/src/main/res/layout/activity_gif_draw.xml
+++ b/RecyclerViewTest/app/src/main/res/layout/activity_gif_draw.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_gif_draw"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.ipcreator.recyclerviewtest.GifDrawActivity">
 
     <pl.droidsonroids.gif.GifImageView
@@ -17,4 +13,4 @@
         android:src="@drawable/gif1"
         />
 
-</RelativeLayout>
+</LinearLayout>
